--- a/HW3/MyBiz.css
+++ b/HW3/MyBiz.css
@@ -67,7 +67,7 @@ li {
     height: 609px;
     margin: 0;
     padding: 0;
-    filter: brightness(90%);
+    filter: brightness(80%);
     position: absolute;
 }
 
@@ -160,6 +160,7 @@ button {
 .secondPart p {
     font-family:Arial,Helvetica,sans-serif;
     font-size: 12px;
+    letter-spacing: -0.4px;
     color: gray;
 }
 
@@ -386,7 +387,6 @@ button {
 .webName, .webAddress, .icons{
     text-align: center;
     position: relative;
-    font-family:Arial,Helvetica,sans-serif;
 }
 
 .webName {
@@ -394,12 +394,14 @@ button {
     color: white;
     font-family: "Montserrat", sans-serif;
     letter-spacing: -0.4px;
+    font-size: 13px;
 }
 
 .webAddress {
     color: gray;
     margin-top: 10px;
-    font-size: 12px;
+    font-size: 10px;
+    font-family:Arial,Helvetica,sans-serif;
 }
 
 .icons {
@@ -411,8 +413,10 @@ button {
 }
 
 .icons img {
-    width: 30px;
-    height: 30px;
-    margin-left: 40px;
+    width: 26px;
+    height: 26px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: center;
 }
 
