--- a/HW6/BackEnd/static/WeatherSearch.css
+++ b/HW6/BackEnd/static/WeatherSearch.css
@@ -1,8 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=roboto);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 html {
-    width: 900px;
-    left: 0;
+    width: 1100px;
+    left: 200px;
     right: 0;
     margin:auto;
     position: absolute;
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    width: 900px;
+    width: 1100px;
     margin: 0;
     padding: 0;
 
@@ -42,7 +42,7 @@ body {
     height: 103px;
     padding: 0;
     margin-left: 40px;
-    font-family: "roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #535353
 }
 
@@ -64,7 +64,7 @@ body {
     position: absolute;
 }
 
-.address {
+.addressForm {
     position: relative;
     margin-left: 40px;
     margin-top: 15px;
@@ -77,7 +77,7 @@ body {
     color: red;
 }
 
-input {
+.streetInput {
     width: 520px;
     height: 25px;
     margin-top: 10px;
@@ -99,6 +99,9 @@ input {
 
 .cityInput {
     width: 235px;
+    height: 25px;
+    margin-top: 10px;
+    font-size: 18px;
 }
 
 .stateSelect {
@@ -117,12 +120,12 @@ input {
     position: relative;
     width: 520px;
     margin-left: 0;
-    margin-top: 10px;
+    margin-top: 25px;
     float: initial;
 }
 
 .currentLocation {
-    margin-top: 15px;
+    margin-top: 25px;
     font-size: 20px
 }
 
@@ -131,15 +134,15 @@ input {
     height: 16px;
 }
 
-button {
-    width: 100px;
-    height: 60px;
+.submitB, .clear {
+    width: 110px;
+    height: 55px;
     margin-top: 25px;
     color: white;
     font-size: 20px;
 }
 
-.submit {
+.submitB {
     background-color: #516ba7;
     border-width: 0 0 7px 0;
     border-color: #384a75;
@@ -151,4 +154,72 @@ button {
     border-width: 0 0 7px 0;
     border-color: #ef8933;
     border-style: solid;
+}
+
+.card:hover {
+    box-shadow: 0 3px 3px 3px gray;
+}
+
+table {
+    padding: 0;
+}
+
+.detailCard:hover {
+    box-shadow: 0 3px 3px 3px gray;
+}
+
+.temperature-figure, .highcharts-data-table table {
+    min-width: 310px;
+    max-width: 800px;
+    margin: 1em auto;
+}
+
+#tempContainer {
+    height: 400px;
+}
+
+.highcharts-data-table table {
+	font-family: Verdana, sans-serif;
+	border-collapse: collapse;
+	border: 1px solid #EBEBEB;
+	margin: 10px auto;
+	text-align: center;
+	width: 100%;
+	max-width: 500px;
+}
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+.highcharts-data-table th {
+	font-weight: 600;
+    padding: 0.5em;
+}
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+    padding: 0.5em;
+}
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
+
+#weatherContainer {
+  height: 400px;
+  max-width: 800px;
+  min-width: 380px;
+  margin: 0 auto;
+}
+
+#loading {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.weather-figure, .highcharts-data-table table {
+  min-width: 350px;
+  max-width: 800px;
+  margin: 1em auto;
 }
