--- a/HW6/BackEnd/static/WeatherSearch.css
+++ b/HW6/BackEnd/static/WeatherSearch.css
@@ -70,7 +70,7 @@ body {
     margin-top: 15px;
     font-size: 18px;
     color: #3853a8;
-    font-family: "Lato", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .star {
@@ -140,6 +140,7 @@ body {
     margin-top: 25px;
     color: white;
     font-size: 20px;
+    font-weight: 100;
 }
 
 .submitB {
