--- a/HW6/BackEnd/static/WeatherSearch.css
+++ b/HW6/BackEnd/static/WeatherSearch.css
@@ -143,6 +143,10 @@ body {
     font-weight: 100;
 }
 
+.submitB:active, .clear:active {
+    box-shadow: 0 1px 1px 1px gray;
+}
+
 .submitB {
     background-color: #516ba7;
     border-width: 0 0 7px 0;
@@ -209,7 +213,7 @@ table {
 
 #weatherContainer {
   height: 400px;
-  max-width: 1000px;
+  max-width: 1300px;
   min-width: 380px;
   margin: 40px 0 0 0;
 }
