--- a/HW6/BackEnd/static/WeatherSearch.css
+++ b/HW6/BackEnd/static/WeatherSearch.css
@@ -62,6 +62,9 @@ body {
     height: 350px;
     background-color: white;
     position: absolute;
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+    border-color: #cccccc;
 }
 
 .addressForm {
@@ -164,6 +167,7 @@ body {
 .card:hover {
     box-shadow: 0 3px 3px 3px gray;
 }
+
 
 table {
     padding: 0;
