--- a/HW6/BackEnd/static/WeatherSearch.css
+++ b/HW6/BackEnd/static/WeatherSearch.css
@@ -88,7 +88,7 @@ body {
 }
 
 .city, .state {
-    margin-top: 10px;
+    margin-top: 20px;
     float: left;
 }
 
@@ -112,10 +112,12 @@ body {
 }
 
 .stateSelect {
+    font-family: "Roboto", sans-serif;
     margin-top: 10px;
     font-size: 21px;
     padding: 2px;
     border: 1px #8f8f9c solid;
+    font-weight: 300;
 }
 
 .line {
@@ -124,7 +126,8 @@ body {
     width: 520px;
     margin-left: 0;
     margin-top: 25px;
-    float: initial;
+    border-style: solid;
+    /*float: initial;*/
 }
 
 .currentLocation {
@@ -138,6 +141,7 @@ body {
 }
 
 .submitB, .clear {
+    font-family: "Roboto", sans-serif;
     width: 110px;
     height: 55px;
     margin-top: 25px;
@@ -151,7 +155,7 @@ body {
 }
 
 .submitB {
-    background-color: #516ba7;
+    background-color: #4c6da8;
     border-width: 0 0 7px 0;
     border-color: #384a75;
     border-style: solid;
