--- a/HW8/FrontEnd/src/app/app.component.html
+++ b/HW8/FrontEnd/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-search-form></app-search-form>
+<app-search-result></app-search-result>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
